# Research_Workflow_Agent

./: .cursorrules  .env.example  .gitignore  AGENTS.md  README.md  project_summary.md  pyproject.toml  review_report.md  task416.md
.cursor/rules/: project-stack.mdc
docs/: architecture.md  context_pack.md  development_log.md  evals.md  prd.md  runbook.md  tools.md
docs/adr/: README.md
docs/features_oncoming/: context-compression-for-report-generation.md  entropy-management.md
docs/issue/: 2026-04-16-longform-generation-timeout-and-context-engineering.md  2026-04-16-report-language-and-prompt-english-migration.md  2026-04-16-report-output-workspace-persistence-issue.md  2026-04-16-research-survey-workflow-remediation-order.md  2026-04-16-survey-writing-quality-skills-mcp-gap-analysis.md  2026-04-17-survey-quality-frontend-skills-followup.md
docs/template/: survey_writing_constraints.md
eval/: cases.jsonl  promptfoo.yaml  runner.py
eval/layers/: hard_rules.py
eval/runs/: run-20260416-021102.json  run-20260416-021656.json  run-20260416-022026.json  run-20260416-022714.json  run-20260416-023610.json  run-20260416-023713.json  run-20260416-024436.json  run-20260416-024548.json  run-20260416-025620.json  run-20260416-030854.json  run-20260416-034515.json  run-20260416-053045.json  run-20260416-071438.json  run-20260416-072352.json  run-20260416-073055.json  (+3 more)
frontend/: vite.config.ts
scripts/: ingest_papers.py  reindex_milvus.py
tests/: test_agent_settings.py  test_arxiv_api.py  test_mcp_prompt_skill.py  test_output_workspace.py  test_skill_discovery.py
(+224 files in other folders)
